--- a/index.html
+++ b/index.html
@@ -1,71 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson | Linktree</title>
-    <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
-    <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <!-- Core theme CSS -->
-    <link rel="stylesheet" href="style.css">
-  </head>
+<html lang="es">
 
-  <body>
-    <!-- Parallax Pixel Background Animation -->
-    <section class="animated-background">
-      <div id="stars1"></div>
-      <div id="stars2"></div>
-      <div id="stars3"></div>
-    </section>
-    <!-- End of Parallax Pixel Background Animation -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Acercamiento Político | Linktree</title>
+  <!-- Favicon -->
+  <link rel="icon" href="/logo.png" type="image/x-icon" />
+  <!-- Font Awesome icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <!-- Core theme CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
-    </a>
+<body>
+  <!-- Parallax Pixel Background Animation -->
+  <section class="animated-background">
+    <div id="stars1"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+  </section>
+  <!-- End of Parallax Pixel Background Animation -->
 
-    <div class="overlay" id="popup">
-      <div class="popup">
-        <div class="popup-photo">
-          <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
-          </a>
-        </div>
-        <div class="popup-quote">
-          But... the sensation that I've lost something lingers for a longtime after I wake up.
-        </div>
-        <a class="popup-close" onclick="history.back()">&times;</a>
+  <a id="profilePicture" href="#popup">
+    <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+  </a>
+
+  <div class="overlay" id="popup">
+    <div class="popup">
+      <div class="popup-photo">
+        <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
+          <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+        </a>
       </div>
+      <div class="popup-quote">
+        Somos un colectivo juvenil comprometido con construir un país más justo, transparente y lleno de oportunidades.
+      </div>
+      <a class="popup-close" onclick="history.back()">&times;</a>
     </div>
+  </div>
 
-    <div id="userName">
-      @johnggli
-    </div>
+  <div id="userName">
+    @acercamientopoliticope
+  </div>
 
-    <div id="links">
-      <a class="link" href="https://github.com/johnggli" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
-      </a>
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
-      </a>
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://myanimelist.net/profile/johnggli" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
-      </a>
-    </div>
+  <div id="links">
+    <a class="link" href="mailto:acercamientopoliticope@gmail.com" target="_blank">
+      <i class="fas fa-envelope">&nbsp;</i>Email
+    </a>
+    <a class="link" href="https://www.linkedin.com/in/acercamientopoliticope" target="_blank">
+      <i class="fab fa-linkedin">&nbsp;</i>Linkedin
+    </a>
+    <a class="link" href="https://www.youtube.com/@elgrancomunicador-pe" target="_blank">
+      <i class="fab fa-youtube">&nbsp;</i>YouTube
+    </a>
+    <a class="link" href="https://www.tiktok.com/@acercamientopoliticope" target="_blank">
+      <i class="fab fa-tiktok">&nbsp;</i>TikTok
+    </a>
+    <a class="link" href="https://www.instagram.com/acercamientopoliticope" target="_blank">
+      <i class="fab fa-instagram">&nbsp;</i>Instagram
+    </a>
+    <a class="link" href="https://www.facebook.com/acercamientopoliticope" target="_blank">
+      <i class="fab fa-facebook">&nbsp;</i>Facebook
+    </a>
+    <a class="link" href="https://x.com/acer_politicope" target="_blank">
+      <i class="fa-brands fa-x-twitter">&nbsp;</i>X
+    </a>
+    <a class="link" href="https://kick.com/acercamientopoliticope" target="_blank">
+      <i class="fas fa-gamepad">&nbsp;</i>Kick
+    </a>
+    <a class="link" href="https://acercamientopoliticope.vercel.app" target="_blank">
+      <i class="fas fa-globe">&nbsp;</i>Web
+    </a>
+  </div>
 
-    <div id="hashtag">
-      #BeHappy❤
-    </div>
-  </body>
+  <div id="hashtag">
+    #SeremosLibres
+  </div>
+</body>
+
 </html>
