--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <!-- End of Parallax Pixel Background Animation -->
 
   <a id="profilePicture" href="#popup">
-    <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+    <img src="/logo.png" alt="Profile Picture">
   </a>
 
   <div class="overlay" id="popup">
     <div class="popup">
       <div class="popup-photo">
-        <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-          <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+        <a href="/logo.png" target="_blank">
+          <img src="/logo.png" alt="Profile Picture">
         </a>
       </div>
       <div class="popup-quote">
