--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="popup">
       <div class="popup-photo">
         <a href="/logo.png" target="_blank">
-          <img src="/logo.png" alt="Profile Picture">
+          <img src="/logo.png" alt="Acercamiento Político">
         </a>
       </div>
       <div class="popup-quote">
