--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Favicon -->
   <link rel="icon" href="/logo.png" type="image/x-icon" />
   <!-- Font Awesome icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
   <!-- Core theme CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
