--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acercamiento Político | Linktree</title>
   <!-- Favicon -->
-  <link rel="icon" href="/logo.png" type="image/x-icon" />
+  <link rel="icon" href="logo.png" type="image/x-icon" />
   <!-- Font Awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
   <!-- Core theme CSS -->
