--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <i class="fa-brands fa-x-twitter">&nbsp;</i>X
     </a>
     <a class="link" href="https://kick.com/acercamientopoliticope" target="_blank">
-      <i class="fas fa-gamepad">&nbsp;&nbsp;</i>Kick
+      <i class="fa-brands fa-kickstarter">&nbsp;</i>Kick
     </a>
     <a class="link" href="https://acercamientopoliticope.vercel.app" target="_blank">
       <i class="fas fa-globe">&nbsp;</i>Web
