--- a/index.html
+++ b/index.html
@@ -1,82 +1,201 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Acercamiento Político | Linktree</title>
+    <!-- Favicon -->
+    <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+    <!-- Font Awesome icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
+    <!-- Core theme CSS -->
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Acercamiento Político | Linktree</title>
-  <!-- Favicon -->
-  <link rel="icon" href="logo.png" type="image/x-icon" />
-  <!-- Font Awesome icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-  <!-- Core theme CSS -->
-  <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <!-- Parallax Pixel Background Animation -->
+    <section class="animated-background">
+      <div id="stars1"></div>
+      <div id="stars2"></div>
+      <div id="stars3"></div>
+    </section>
+    <!-- End of Parallax Pixel Background Animation -->
 
-<body>
-  <!-- Parallax Pixel Background Animation -->
-  <section class="animated-background">
-    <div id="stars1"></div>
-    <div id="stars2"></div>
-    <div id="stars3"></div>
-  </section>
-  <!-- End of Parallax Pixel Background Animation -->
+    <a id="profilePicture" href="#popup">
+      <img src="assets/logo.png" alt="Profile Picture" />
+    </a>
 
-  <a id="profilePicture" href="#popup">
-    <img src="logo.png" alt="Profile Picture">
-  </a>
-
-  <div class="overlay" id="popup">
-    <div class="popup">
-      <div class="popup-photo">
-        <a href="logo.png" target="_blank">
-          <img src="logo.png" alt="Acercamiento Político">
-        </a>
+    <div class="overlay" id="popup">
+      <div class="popup">
+        <div class="popup-photo">
+          <a href="logo.png" target="_blank">
+            <img src="logo.png" alt="Acercamiento Político" />
+          </a>
+        </div>
+        <div class="popup-quote">
+          Somos un colectivo juvenil comprometido con construir un país más
+          justo, transparente y lleno de oportunidades.
+        </div>
+        <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
-      <div class="popup-quote">
-        Somos un colectivo juvenil comprometido con construir un país más justo, transparente y lleno de oportunidades.
-      </div>
-      <a class="popup-close" onclick="history.back()">&times;</a>
     </div>
-  </div>
 
-  <div id="userName">
-    @acercamientopoliticope
-  </div>
+    <div id="userName">@acercamientopoliticope</div>
 
-  <div id="links">
-    <a class="link" href="mailto:acercamientopoliticope@gmail.com" target="_blank">
-      <i class="fas fa-envelope">&nbsp;</i>Email
-    </a>
-    <a class="link" href="https://www.linkedin.com/in/acercamientopoliticope" target="_blank">
-      <i class="fab fa-linkedin">&nbsp;</i>Linkedin
-    </a>
-    <a class="link" href="https://www.youtube.com/@elgrancomunicador-pe" target="_blank">
-      <i class="fab fa-youtube">&nbsp;</i>YouTube
-    </a>
-    <a class="link" href="https://www.tiktok.com/@acercamientopoliticope" target="_blank">
-      <i class="fab fa-tiktok">&nbsp;</i>TikTok
-    </a>
-    <a class="link" href="https://www.instagram.com/acercamientopoliticope" target="_blank">
-      <i class="fab fa-instagram">&nbsp;</i>Instagram
-    </a>
-    <a class="link" href="https://www.facebook.com/acercamientopoliticope" target="_blank">
-      <i class="fab fa-facebook">&nbsp;</i>Facebook
-    </a>
-    <a class="link" href="https://x.com/acer_politicope" target="_blank">
-      <i class="fa-brands fa-x-twitter">&nbsp;</i>X
-    </a>
-    <a class="link" href="https://kick.com/acercamientopoliticope" target="_blank">
-      <i class="fa-brands fa-kickstarter">&nbsp;</i>Kick
-    </a>
-    <a class="link" href="https://acercamientopoliticope.vercel.app" target="_blank">
-      <i class="fas fa-globe">&nbsp;</i>Web
-    </a>
-  </div>
+    <div id="links">
+      <!-- Email -->
+      <a
+        class="link"
+        href="mailto:acercamientopoliticope@gmail.com"
+        target="_blank"
+      >
+        <img src="assets/svg/light/mail.svg" class="logo light" alt="email" />
+        <img src="assets/svg/dark/mail.svg" class="logo dark" alt="email" />
+        Email
+      </a>
 
-  <div id="hashtag">
-    #SeremosLibres
-  </div>
-</body>
+      <!-- LinkedIn -->
+      <a
+        class="link"
+        href="https://www.linkedin.com/in/acercamientopoliticope"
+        target="_blank"
+      >
+        <img
+          src="assets/svg/light/linkedin.svg"
+          class="logo light"
+          alt="linkedin"
+        />
+        <img
+          src="assets/svg/dark/linkedin.svg"
+          class="logo dark"
+          alt="linkedin"
+        />
+        Linkedin
+      </a>
 
+      <!-- WhatsApp Comunidad -->
+      <a
+        class="link"
+        href="https://chat.whatsapp.com/KQkrnH2QHB17IMlV4TJAxV"
+        target="_blank"
+      >
+        <img
+          src="assets/svg/light/whatsapp.svg"
+          class="logo light"
+          alt="whatsapp"
+        />
+        <img
+          src="assets/svg/dark/whatsapp.svg"
+          class="logo dark"
+          alt="whatsapp"
+        />
+        Comunidad de Whatsapp
+      </a>
+
+      <!-- YouTube -->
+      <a
+        class="link"
+        href="https://www.youtube.com/@acercamientopolitico-pe"
+        target="_blank"
+      >
+        <img
+          src="assets/svg/light/youtube.svg"
+          class="logo light"
+          alt="youtube"
+        />
+        <img
+          src="assets/svg/dark/youtube.svg"
+          class="logo dark"
+          alt="youtube"
+        />
+        YouTube
+      </a>
+
+      <!-- TikTok -->
+      <a
+        class="link"
+        href="https://www.tiktok.com/@acercamientopoliticope"
+        target="_blank"
+      >
+        <img
+          src="assets/svg/light/tiktok.svg"
+          class="logo light"
+          alt="tiktok"
+        />
+        <img src="assets/svg/dark/tiktok.svg" class="logo dark" alt="tiktok" />
+        TikTok
+      </a>
+
+      <!-- Instagram -->
+      <a
+        class="link"
+        href="https://www.instagram.com/acercamientopoliticope"
+        target="_blank"
+      >
+        <img
+          src="assets/svg/light/instagram.svg"
+          class="logo light"
+          alt="instagram"
+        />
+        <img
+          src="assets/svg/dark/instagram.svg"
+          class="logo dark"
+          alt="instagram"
+        />
+        Instagram
+      </a>
+
+      <!-- Facebook -->
+      <a
+        class="link"
+        href="https://www.facebook.com/acercamientopoliticope"
+        target="_blank"
+      >
+        <img
+          src="assets/svg/light/facebook.svg"
+          class="logo light"
+          alt="facebook"
+        />
+        <img
+          src="assets/svg/dark/facebook.svg"
+          class="logo dark"
+          alt="facebook"
+        />
+        Facebook
+      </a>
+
+      <!-- X (Twitter) -->
+      <a class="link" href="https://x.com/acer_politicope" target="_blank">
+        <img src="assets/svg/light/x.svg" class="logo light" alt="x" />
+        <img src="assets/svg/dark/x.svg" class="logo dark" alt="x" />
+        X
+      </a>
+
+      <!-- Kick -->
+      <a
+        class="link"
+        href="https://kick.com/acercamientopoliticope"
+        target="_blank"
+      >
+        <img src="assets/svg/light/kick.svg" class="logo light" alt="kick" />
+        <img src="assets/svg/dark/kick.svg" class="logo dark" alt="kick" />
+        Kick
+      </a>
+
+      <!-- Web -->
+      <a
+        class="link"
+        href="https://acercamientopoliticope.vercel.app"
+        target="_blank"
+      >
+        <img src="assets/svg/light/globe.svg" class="logo light" alt="globe" />
+        <img src="assets/svg/dark/globe.svg" class="logo dark" alt="globe" />
+        Web
+      </a>
+    </div>
+    <div id="hashtag">#SeremosLibres</div>
+  </body>
 </html>
