Fixed image src

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="logo.png" target="_blank">
-            <img src="logo.png" alt="Acercamiento Político" />
+          <a href="assets/logo.png" target="_blank">
+            <img src="assets/logo.png" alt="Acercamiento Político" />
           </a>
         </div>
         <div class="popup-quote">
